fix FlavorLanding filter button align

--- a/src/components/FlavorsLanding/FlavorsLanding.scss
+++ b/src/components/FlavorsLanding/FlavorsLanding.scss
@@ -18,6 +18,11 @@
     }
   }
 
+  &__filter-button {
+    padding-top: calc(#{spacing(2)} + 0.0625rem);
+    padding-bottom: calc(#{spacing(2)} - 0.0625rem);
+  }
+
   &__dietary-restrictions {
     min-width: spacing(50);
     margin: spacing(4) 0;
